--- a/coffee_project/src/main/resources/templates/oder/index.html
+++ b/coffee_project/src/main/resources/templates/oder/index.html
@@ -60,9 +60,11 @@
                         <p class="h1 float-start">Đặt Sản Phẩm</p>
                         <form action="/order/" class="float-end" method="get">
                             <div class="input-group">
-                                <select class="form-select rounded"  name="type" aria-label="Default select example">
-                                    <option th:selected="${type==''}"  value="">Chọn loại đồ uống</option>
-                                    <option th:selected="${type==typeProduct.productTypeName}"  th:each="typeProduct:${listProductType}" th:value="${typeProduct.productTypeName}"
+                                <select class="form-select rounded" name="type" aria-label="Default select example">
+                                    <option th:selected="${type==''}" value="">Chọn loại đồ uống</option>
+                                    <option th:selected="${type==typeProduct.productTypeName}"
+                                            th:each="typeProduct:${listProductType}"
+                                            th:value="${typeProduct.productTypeName}"
                                             th:text="${typeProduct.productTypeName}">
                                         One
                                     </option>
@@ -102,7 +104,7 @@
                                 </form>
                             </div>
                         </div>
-
+                        <div th:if="${msg2}" th:text="${msg2}" class="text-danger h3"></div>
 
                     </div>
                     <div class="d-flex justify-content-center container-fluid">
@@ -114,7 +116,7 @@
                                         th:href="@{/order/(page=${listProduct.number -1},name=${name})}">Trước</a>
                                 </li>
                                 <li class="page-link disabled">
-                                    <span th:text="${listProduct.number + 1}"></span>/<span
+                                    <span th:text="${listProduct.totalPages==0}? 0 :${listProduct.number + 1}"></span>/<span
                                         th:text="${listProduct.totalPages}">
                                 </span>
                                 </li>
