[coffee][Cuong][Order]Update index

--- a/coffee_project/src/main/resources/templates/oder/index.html
+++ b/coffee_project/src/main/resources/templates/oder/index.html
@@ -71,7 +71,7 @@
                                 </select>
                                 <input id="search-input" name="name" type="search" placeholder="Tên sản phẩm"
                                        class="form-control rounded mx-2" th:value="${name}"/>
-                                <button id="search-button" type="submit" class="btn btn-primary rounded">
+                                <button id="search-button" type="submit" class="btn btn-primary ">
                                     <i class="fas fa-search"></i>
                                 </button>
                             </div>
