[coffee][Cuong][Order]Update index

--- a/coffee_project/src/main/resources/templates/oder/index.html
+++ b/coffee_project/src/main/resources/templates/oder/index.html
@@ -71,7 +71,7 @@
                                 </select>
                                 <input id="search-input" name="name" type="search" placeholder="Tên sản phẩm"
                                        class="form-control rounded mx-2" th:value="${name}"/>
-                                <button id="search-button" type="submit" class="btn btn-primary ">
+                                <button id="search-button" type="submit" class="btn btn-primary rounded">
                                     <i class="fas fa-search"></i>
                                 </button>
                             </div>
@@ -137,7 +137,7 @@
     </div>
 
     <div class="col-12 position-fixed top-50 bottom-50" style="z-index: 2;">
-        <button class="btn btn-outline-dark float-end position-relative rounded-circle"
+        <button class="btn btn-outline-dark float-end position-relative"
                 style="margin-top: 11%;margin-right: 2%"
                 data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
