--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -64,7 +64,7 @@
                                 <th scope="col">Giới tính</th>
                                 <th scope="col">Tài khoản</th>
                                 <th scope="col">Lương</th>
-                                <th scope="col">Vị trí</th>
+                                <th scope="col">Ca làm việc</th>
                                 <th  scope="col" style="text-align: center">Chức năng</th>
 
                                 </thead>
