--- a/coffee_project/src/main/resources/templates/user/change-new-employee.html
+++ b/coffee_project/src/main/resources/templates/user/change-new-employee.html
@@ -117,7 +117,7 @@
                                         <th>Lương <span style="color: red">*</span>
                                             <div style=" height: 20px"></div>
                                         </th>
-                                        <td><input id="salary" class="form-control" th:field="*{userSalary}" type="number">
+                                        <td><input required min="0" max="50000000" id="salary" class="form-control" th:field="*{userSalary}" type="number">
                                             <div style=" height: 20px"><small style="color: red"
                                                                               th:if="${#fields.hasErrors('userSalary')}"
                                                                               th:errors="*{userSalary}"></small></div>
@@ -127,7 +127,7 @@
                                         <th>Ca làm việc <span style="color: red">*</span>
                                             <div style=" height: 20px"></div>
                                         </th>
-                                        <td><select id="disabledSelect" class="form-select" th:field="*{employeeType}">
+                                        <td><select required id="disabledSelect" class="form-select" th:field="*{employeeType}">
                                             <option th:each="employeeType :${employeeTypeList}"
                                                     th:value="${employeeType.employeeTypeId}"
                                                     th:text="${employeeType.employeeTypeName}"></option>
