--- a/coffee_project/src/main/resources/templates/user/update.html
+++ b/coffee_project/src/main/resources/templates/user/update.html
@@ -105,7 +105,7 @@
                                             <div style=" height: 20px"></div>
                                         </th>
                                         <td>
-                                            <input id="userName" class="form-control" th:field="*{userName}"
+                                            <input required id="userName" class="form-control" th:field="*{userName}"
                                                    th:value="${userDto.userName}">
                                             <div style=" height: 20px"><small style="color: red"
                                                                               th:if="${#fields.hasErrors('userName')}"
@@ -119,10 +119,10 @@
                                             <div style=" height: 20px"></div>
                                         </th>
                                         <td>
-                                            <input class="form-check-input" type="radio" name="gender"
+                                            <input  class="form-check-input" type="radio" name="gender"
                                                    th:field="*{userGender}"
                                                    th:value="true">&nbsp;<span>Nam</span>
-                                            <input class="form-check-input" type="radio" name="gender"
+                                            <input  class="form-check-input" type="radio" name="gender"
                                                    th:field="*{userGender}"
                                                    th:value="false">&nbsp;<span>Nữ</span>
 
@@ -141,7 +141,7 @@
                                             <div style=" height: 20px"></div>
                                         </th>
                                         <td>
-                                            <input class="form-control" type="date" th:field="*{userBirthday}">
+                                            <input required class="form-control" type="date" th:field="*{userBirthday}">
                                             <div style=" height: 20px">
                                                 <small style="color: red" th:if="${#fields.hasErrors('userBirthday')}"
                                                        th:errors="*{userBirthday}">
@@ -155,7 +155,7 @@
                                         <th>Điện thoại <span style="color: red">*</span>
                                             <div style=" height: 20px"></div>
                                         </th>
-                                        <td><input class="form-control " th:field="*{userPhoneNumber}">
+                                        <td><input required class="form-control " th:field="*{userPhoneNumber}">
                                             <div style=" height: 20px">
                                                 <small style="color: red"
                                                        th:if="${#fields.hasErrors('userPhoneNumber')}"
@@ -168,7 +168,7 @@
                                             <div style=" height: 20px"></div>
                                         </th>
                                         <td>
-                                            <input class="form-control" th:field="*{userEmail}">
+                                            <input required class="form-control" th:field="*{userEmail}">
                                             <div style=" height: 20px">
                                                 <small style="color: red" th:if="${#fields.hasErrors('userEmail')}"
                                                        th:errors="*{userEmail}"></small>
@@ -179,7 +179,7 @@
                                         <th>Căn cước <span style="color: red">*</span>
                                             <div style=" height: 20px"></div>
                                         </th>
-                                        <td><input class="form-control" th:field="*{userIdCard}">
+                                        <td><input required class="form-control" th:field="*{userIdCard}">
                                             <div style=" height: 20px">
                                                 <small style="color: red" th:if="${#fields.hasErrors('userIdCard')}"
                                                        th:errors="*{userIdCard}"></small>
